Clean up A11y contrast issues

--- a/bases/rsptx/interactives/runestone/accessibility/css/accessibility.css
+++ b/bases/rsptx/interactives/runestone/accessibility/css/accessibility.css
@@ -49,7 +49,7 @@ button.btn.btn-default:focus {
 }
 button.btn.btn-default{
 	color:#FFFFFF !important;
-	background-color: var(--codebuttons) !important;
+	background-color: rgb(71, 73, 73) !important;
 }
 button.btn.btn-default.btn-sm.disabled:active {
 	color:#474949 !important;
