--- a/bases/rsptx/interactives/runestone/common/css/runestone-custom-sphinx-bootstrap.css
+++ b/bases/rsptx/interactives/runestone/common/css/runestone-custom-sphinx-bootstrap.css
@@ -10,7 +10,7 @@
     --navbarFont: #707070;
     --navbarFontHover: #000000;
     --alerts: #d9edf7;
-    --completionButton: #ffaa2b;
+    --completionButton: #f19711;
     --completionButtonHover: #ff9f19;
     --admonition: #fcf8e3;
     --admonitionBorder: #fbeed5;
@@ -881,7 +881,7 @@ div.flash {
     margin-bottom: 15px;
     padding-left: 70px;
     padding-right: 70px;
-    color: #ffffff;
+    color: var(--completionButtonText);
     font-weight: bold;
 }
 
@@ -897,8 +897,9 @@ div.flash {
 }
 
 .buttonConfirmCompletion {
-    background-color: #50d392;
+    background-color: #377e22;
     border-color: #3dc682;
+    color: #ffffff !important;
 }
 
 .buttonConfirmCompletion:hover {
